# C1_Coursework_Package

./: Dockerfile  README.md  dual_autodiff.ipynb  dual_autodiff.md  pyproject.toml
docs/: conf.py  dual_autodiff.ipynb  index.rst
dual_autodiff/: dual.py  version.py
old test files/: cos_test.npy  exp_test.npy  log_test.npy  sin_test.npy  tan_test.npy
tests/: test_dual.py
