[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "dual" # name of the package must match the core folder name
dynamic = ["version"]
description = "A Python package for automatic differentiation with dual numbers."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Alex", email = "ap2495@cam.ac.uk" },
]

keywords = ["differentiation", "autodifferentiation", "Dual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Machine Learning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy",
    "matplotlib",
    "pytest",
]


[project.urls]
"Documentation" = "TBD"
"Source" = "TBD"
"Issues" = "TBD"
[tool.setuptools_scm]
write_to = "dual_autodiff/version.py"  # Where to write the dynamic version
[tool.setuptools.packages.find]
where = ["."]
